--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -124,6 +124,7 @@
             <input type="hidden" name="view" value="{{ view_mode }}">
             <input type="text" name="search" placeholder="Search clients..." value="{{ search }}">
             <span class="search-icon">🔍</span>
+            <button type="button" class="clear-search" style="display: none;">✕</button>
         </form>
         
         <!-- Add Client Button -->
