--- a/web/templates/add_client.html
+++ b/web/templates/add_client.html
@@ -12,7 +12,7 @@
     <h2>Add New Client</h2>
     <p style="color: #5B6571; margin-top: 0.5rem; margin-bottom: 2rem;">Create a new client record</p>
     
-    <form method="post">
+    <form method="post" data-file-number-format="{{ file_number_format }}">
         <div class="form-group">
             <label for="type_id">Client Type</label>
             <select id="type_id" name="type_id" required>
