--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -127,6 +127,7 @@
         </form>
         
         <!-- Add Client Button -->
+        <a href="{{ url_for('manage_links') }}" class="btn-primary">Edit Links</a>
         <a href="{{ url_for('manage_types') }}" class="btn-primary">Edit Types</a>
         <a href="{{ url_for('add_client') }}" class="btn-primary">+ Client</a>
     </div>
@@ -159,6 +160,7 @@
                     {{ client.type.name }}
                 </span>
                 <span class="file-number">{{ client.file_number }}</span>
+                {% if client.is_linked %}<span class="link-icon" title="Linked to other clients">🔗</span>{% endif %}
                 <span class="client-name">{{ client.last_name }}, {{ client.first_name }}{% if client.middle_name %} {{ client.middle_name }}{% endif %}</span>
                 <div class="contact-info">
                     {% if client.email %}
@@ -187,6 +189,7 @@
                         {{ client.type.name }}
                     </span>
                     <span style="color: #6B7280; font-size: 0.875rem;">{{ client.file_number }}</span>
+                    {% if client.is_linked %}<span class="link-icon" title="Linked to other clients">🔗</span>{% endif %}
                 </div>
                 <div class="client-name">{{ client.last_name }}, {{ client.first_name }}{% if client.middle_name %} {{ client.middle_name }}{% endif %}</div>
                 <div class="contact-row">
